<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="E_DataSet" Id="{1974b610-bddf-4616-8e97-eedade75fee5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_DataSet :
(
	SETPOINTS := 1,
	ACTUAL := 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>